# Indie-Studio

./: CMakeLists.txt  Makefile  main.cpp
includes/: Core.hpp  Errors.hpp  EventReceiver.hpp  FPSBenchmark.hpp  KeySelector.hpp  Map.hpp  MeshManager.hpp  MouseEvent.hpp  Player.hpp  Room.hpp  ScoreManager.hpp  SoundEventReceiver.hpp  ThreadPool.hpp
includes/Entity/: Elf.hpp  IEntity.hpp  Monster.hpp  Valkyrie.hpp  Warrior.hpp  Wizard.hpp
includes/GamePhase/: IGamePhase.hpp  InGame.hpp  Intro.hpp  MainMenu.hpp  SelectCharacter.hpp
includes/Objects/: IObject.hpp  Potion.hpp
includes/PowerUp/: IPowerUp.hpp
lib/: install.sh
resources/: keybindings.ini  myfont.xml  save.ini  score.ini  stick.3ds
resources/Intro/: Silver_fist.md3  Text_Intro.md3
resources/Mesh/Elf/: Arrow.md3  AttackArrow.md3  AttackBody.md3  AttackBow.md3  AttackFace.md3  AttackHair.md3  AttackQuiver.md3  SelectBody.md3  SelectBow.md3  SelectHair.md3  SelectQuiver.md3  WalkBody.md3  WalkBow.md3  WalkFace.md3  WalkHair.md3  WalkQuiver.md3
resources/Mesh/Valkyrie/: AttackArm.md3  AttackArmArmor.md3  AttackCap.md3  AttackChest.md3  AttackChestPlate.md3  AttackForeArmArmor.md3  (+42 more)
sources/: Core.cpp  Errors.cpp  EventReceiver.cpp  FPSBenchmark.cpp  KeySelector.cpp  Map.cpp  MeshManager.cpp  MouseEvent.cpp  Player.cpp  Room.cpp  ScoreManager.cpp  SoundEventReceiver.cpp  ThreadPool.cpp
sources/Entity/: Elf.cpp  Monster.cpp  Valkyrie.cpp  Warrior.cpp  Wizard.cpp
sources/GamePhase/: InGame.cpp  Intro.cpp  MainMenu.cpp  SelectCharacter.cpp
sources/Objects/: Potion.cpp
sources/PowerUp/: PowerUp.cpp
(+18 files in other folders)
